# Outrider

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  HORIZON_ARCS.md  LICENSE  LIVE_RUN_EXPECTED_FINDINGS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  router.tsx  theme.css  vite-env.d.ts
dashboard/src/api/: client.ts  schema.d.ts  setup.test.ts  setup.ts  slackSetup.test.ts  slackSetup.ts
dashboard/src/auth/: TokenGate.test.tsx  TokenGate.tsx  token.test.ts  token.ts
dashboard/src/components/: AuditFeed.test.tsx  AuditFeed.tsx  CodeBlock.tsx  DecisionControls.tsx  DemoBanner.test.tsx  DemoBanner.tsx  DetailsGrid.tsx  FindingCard.test.tsx  FindingCard.tsx  HeroChart.completeness.test.tsx  HeroChart.tsx  MetricCard.tsx  Modal.tsx  PipelineStrip.test.tsx  PipelineStrip.tsx  PolicyModal.tsx  PolicyTable.tsx  RangeSeg.tsx  ReplayFeed.test.tsx  ReplayFeed.tsx  ReplayInfoModal.tsx  ReplayPanel.tsx  ReplayTimeline.test.tsx  ReplayTimeline.tsx  SeverityBar.tsx  Sidebar.test.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  (+4 more)
db/migrations/: env.py
deploy/: .env.demo.example  Caddyfile  Caddyfile.prod  Dockerfile  Dockerfile.prod  Dockerfile.web  README.md  docker-compose.demo.yml  docker-compose.prod.yml  up.sh
scripts/: _git_range_scenario.py  _narrate.py  _trace_log.py  check_decision_refs.py  check_import_boundaries.py  diagnose_review_context.py  extract_invariants.py  gen_openapi.py  generate_contents.py  generate_snapshot.py  generate_struct.py  inspect_review.py  live_claude_smoke.py  live_github_demo.py  render_exemplar_arc_report.py  seed_demo.py  smoke_e2e.py  test__git_range_scenario.py  test_check_decision_refs.py  test_check_import_boundaries.py  test_extract_invariants.py  test_live_claude_smoke.py
scripts/demo_fixtures/: README.md  api_request_handler.py  blocking_async.py  report_builder.py  vulnerable_query.py  weak_crypto_handler.py
spikes/: __init__.py
spikes/github_app/: NOTES.md  README.md  receiver.py  requirements.txt  run_all.py  runbook.md  verify_installation_token.py
spikes/hitl/: smoke_hitl.py
spikes/openai/: __init__.py  probe.py  refusal_discovery.py  strict_schema_probe.py
spikes/publish/: README.md  __init__.py  smoke_publish.py
spikes/tree_sitter/: NOTES.md  README.md  requirements.txt  run_all.py
src/outrider/: __init__.py  main.py
tests/: conftest.py
tests/eval/: conftest.py  corpus_grading.py  exemplar_baseline.py  glm_yield.py  grading.py  metrics.py  model_comparison.py  runner.py  scorecard.py  scorecard_juice_shop.json  test_baseten_host_e2e.py  test_conservatism_probe.py  test_corpus_grading.py  test_cost_measurement.py  test_eval_db_isolation_guard.py  test_exemplar_baseline.py  test_factory_schema_compliance.py  test_glm_scorecard.py  test_glm_yield.py  test_grading.py  test_is_eval_flag.py  test_juice_shop_corpus_scorecard.py  test_metrics_framework.py  test_model_comparison.py  test_openai_node_admission.py  test_openai_scorecard.py  test_patch_admission.py  test_run_review_driver.py  test_runner.py  test_scorecard.py  test_ssrf_prompt_probe.py  test_synthesize_summary_comparison.py  test_trace_admission.py  test_triage_grading.py  triage_grading.py
tests/fixtures/: python_canonical.py
tests/integration/: conftest.py  test_analyze_cache_store.py  test_analyze_foundation_replay.py  test_analyze_graph_wiring.py  test_analyze_parallel.py  test_analyze_shadowing_cache.py  test_anomaly_persister_duplicate.py  test_anomaly_rule_name_index_paired.py  test_ast_facts_query_registry.py  test_audit_append_only_trigger.py  test_audit_persister_atomicity.py  test_audit_persister_concurrent_emit.py  test_audit_persister_emit_file_examination.py  test_audit_persister_idempotency_conflict.py  test_audit_persister_is_eval_propagation.py  test_audit_persister_llm_call_emission.py  test_audit_persister_natural_key.py  test_audit_persister_phase_event_emission.py  test_audit_persister_post_retention_no_resurrection.py  test_audit_persister_retention_expires_at.py  test_audit_persister_served_finding_idempotency.py  test_audit_replay.py  test_audit_review_id_not_null.py  test_credential_provider_database.py  test_dashboard_agent_view_api.py  test_dashboard_events_api.py  test_dashboard_findings_api.py  test_dashboard_metrics_api.py  test_dashboard_policy_api.py  test_dashboard_replay_api.py  test_dashboard_reviews_api.py  test_e2e_smoke.py  test_eval_harness_is_eval_flag.py  test_findings_content_writer.py  test_findings_policy_version_fk.py  test_genesis_migration.py  test_installation_events.py  test_installation_purge_lifecycle.py  test_installation_repositories_unique.py  test_installations_slack_columns.py  (+40 more)
tests/unit/: conftest.py  test_agent_graph_builder.py  test_agent_reducers.py  test_analysis_round_schema.py  test_analyze_aggregate_fold.py  test_analyze_audit_events.py  test_analyze_budget_planner.py  test_analyze_bundle.py  test_analyze_cache_key.py  test_analyze_cache_wiring.py  test_analyze_config.py  test_analyze_cross_type_subsumption.py  test_analyze_fanout.py  test_analyze_node.py  test_analyze_observed_producer.py  test_analyze_observed_routing.py  test_analyze_parser.py  test_analyze_parser_scaffolding.py  test_analyze_post_trace_pass.py  test_analyze_prefer_observed.py  test_analyze_proposal_schemas.py  test_analyze_response_schema_pin.py  test_analyze_trivial_filter.py  test_analyze_worker_build.py  test_analyze_worker_outcome.py  test_analyze_worker_wiring.py  test_anomaly_sink.py  test_arc2_composed_lifecycle.py  test_arc2_path_isolation.py  test_arc2_probe_request_shape.py  test_arc2_strict_parser_contract.py  test_arc2_strict_schema.py  test_arc2_verdict_classifier.py  test_ast_facts_javascript.py  test_ast_facts_parameterized_calls.py  test_ast_facts_python.py  test_ast_facts_registry.py  test_ast_facts_typescript.py  test_audit_event_base.py  test_audit_event_discriminator.py  (+174 more)
(+404 files in other folders)
