[project]
name = "outrider"
version = "0.1.0"
description = "Agentic PR review — structure-aware, HITL-gated, append-only audit"
requires-python = ">=3.13"
dependencies = [
    # Web / API
    "fastapi==0.135.3",
    "uvicorn[standard]==0.45.0",
    "httpx==0.28.1",

    # Agent / LLM
    "langgraph==1.1.6",
    "langgraph-checkpoint-postgres==3.0.5",
    "anthropic==0.96.0",

    # Schema / validation / settings
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",

    # Database — single driver (psycopg3) for both SQLAlchemy and LangGraph
    # See DECISIONS.md #001 (supersedes spec §14.1 two-driver pattern)
    "sqlalchemy[asyncio]==2.0.49",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.3",

    # GitHub
    "githubkit==0.15.3",
    "pyjwt[crypto]==2.12.1",

    # Tree-sitter
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",

    # Diff parsing
    "unidiff==0.7.5",

    # Logging
    "structlog==25.5.0",

    # ── V2 (Celery task queue + Redis broker — not active in V1) ────────────
    # "celery==5.6.3",
    # "redis==7.4.0",
    # ────────────────────────────────────────────────────────────────────────
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "mypy==1.20.2",
    "ruff==0.15.11",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outrider"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "TCH", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]       # assert is fine in tests
"scripts/test_*.py" = ["S603"]   # smoke tests run trusted local scripts
"spikes/**/*.py" = ["S", "N"]   # throwaway — relax security and naming, keep bugbear

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/db/migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

