[project]
name = "outrider"
version = "0.1.0"
description = "Agentic PR review — structure-aware, HITL-gated, append-only audit"
requires-python = ">=3.13"
dependencies = [
    # Web / API
    "fastapi==0.135.3",
    "uvicorn[standard]==0.47.0",
    "httpx==0.28.1",
    # Agent / LLM
    "langgraph==1.1.6",
    "langgraph-checkpoint-postgres==3.0.5",
    "anthropic==0.100.0",
    # GLM 5.2 via Baseten (OpenAI-compatible) — second LLM provider mode.
    # `import openai` is confined to src/outrider/llm/ per trust boundary #8
    # (allowlisted in scripts/check_import_boundaries.py). See GLM_PROVIDER_THOUGHTS.md.
    "openai==2.44.0",
    # Schema / validation / settings
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    # Database — single driver (psycopg3) for both SQLAlchemy and LangGraph
    # See DECISIONS.md #001 (supersedes spec §14.1 two-driver pattern)
    "sqlalchemy[asyncio]==2.0.49",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.3",
    # GitHub
    "githubkit==0.15.3",
    "pyjwt[crypto]==2.12.1",
    # Crypto — Slack bot-token encryption at rest (DECISIONS.md#051). Present
    # transitively via pyjwt[crypto]; pinned explicit because notify/token_crypto.py
    # imports it directly (Fernet) — don't rely on a transitive for a direct import.
    "cryptography==46.0.7",
    # Tree-sitter
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    # Diff parsing
    "unidiff==0.7.5",
    # Logging
    "structlog==25.5.0",
    # ── V2 (Celery task queue + Redis broker — not active in V1) ────────────
    # "celery==5.6.3",
    # "redis==7.4.0",
    # ────────────────────────────────────────────────────────────────────────
    "slack-sdk==3.42.0",
    "aiohttp==3.14.1",  # slack_sdk AsyncWebClient's async HTTP backend (not auto-installed)
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "mypy==1.20.2",
    "ruff==0.15.11",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outrider"]

[tool.pytest.ini_options]
# `pythonpath = ["src"]` only — `tests/` is NOT importable from `src/` per
# `docs/conventions.md`. Cross-tier test imports (e.g., harness-internal
# tests consuming eval-harness factories) live inside `tests/eval/` itself
# and use relative imports (`from .fixtures import ...`); no widening of
# the production/test boundary needed.
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"
# force-exclude makes ruff honor extend-exclude even when files are passed
# explicitly on the command line (as pre-commit does).
force-exclude = true
extend-exclude = [
    # Vendored upstream code (pygoat) — not Outrider-authored, not our style problem.
    "spikes/tree_sitter/fixtures/pygoat_introduction_views.py",
    # Intentionally malformed Python — fixtures for ast_facts parse-failure handling.
    "spikes/tree_sitter/fixtures/syntax_error_inside_scope.py",
    "spikes/tree_sitter/fixtures/syntax_error_outside_scope.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "TCH", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]       # assert is fine in tests
"tests/fixtures/python_canonical.py" = ["I", "F"]  # test data fixture; not imported/run
"scripts/test_*.py" = ["S603"]   # smoke tests run trusted local scripts
"spikes/**/*.py" = ["S", "N"]   # throwaway — relax security and naming, keep bugbear
# Live-review demo fixtures: input to the seed demo, carrying deliberate planted
# flaws. They must read as plausible production code (no inline noqa, which the
# triage model would read as a "skip this, it's test scaffolding" signal), so the
# planted-flaw suppressions live here — scoped to the exact file + exact rule.
# See scripts/demo_fixtures/README.md. NOT a wildcard: each file ignores only the
# specific rules its planted flaw trips, so every OTHER ruff rule still applies to
# the file. (The ignore is rule-scoped, not line-scoped — a second accidental hit
# of the same rule in that file would also be suppressed; acceptable for these
# tiny single-purpose fixtures.)
"scripts/demo_fixtures/vulnerable_query.py" = ["S608"]        # planted SQL injection
"scripts/demo_fixtures/weak_crypto_handler.py" = ["S304"]     # planted weak cipher (DES/ECB)
"scripts/demo_fixtures/report_builder.py" = ["S110", "SIM105"]  # planted bare try-except-pass

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

# unidiff==0.7.5 ships no type stubs; consume as untyped under --strict.
[[tool.mypy.overrides]]
module = ["unidiff", "unidiff.*"]
ignore_missing_imports = true


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/db/migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

